spacing fix

--- a/css/sheetscreen_style.css
+++ b/css/sheetscreen_style.css
@@ -253,6 +253,6 @@ body {
     outline: none;
 }
 
-.background-text {
+.cardspacing {
     line-height: 0.5;
 }
